Fixed Section2 Spacing issue and worked on Section1

--- a/Style/styles.css
+++ b/Style/styles.css
@@ -22,6 +22,10 @@ body {
     width: 33%;
 }
 
+.columnSection1Side.side {
+    width: 25%;
+}
+
 /* Middle column */
 .column.middle2 {
     width: 33%;
@@ -89,7 +93,7 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    margin-left: 70%;
+    margin-left: 60%;
     width: 80px;
     color: #000000;
 }
@@ -363,6 +367,28 @@ html {
     flex: 33.33%;
     padding-left: 10px;
     float: left;
+}
+
+.columnPricing {
+    flex: 25%;
+    margin-left: 8%;
+    float: left;
+}
+
+.columnSection1 {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.columnSection1Side {
+    display: flex;
+    width: 25%;
+}
+.columnSection1Side2 {
+    display: flex;
+    width: 25%;
 }
 
 .columns_footer {
@@ -801,7 +827,7 @@ html {
 .done {
     /* done */
     position: absolute;
-    left: 10px;
+    left: 8.2%;
     width: 16px;
     height: 16px;
     /* Inside auto layout */
@@ -1057,6 +1083,91 @@ font-size: 15px;
 line-height: 18px;
 padding-left: 80%;
 color: #0D0900;
+}
+
+.columns_Section1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.column_Section1 {
+    flex: 25%;
+    margin-left: 5%;
+    float: left;
+}
+
+.contact-Us {
+    /* Rectangle 41 */
+width: 180px;
+height: 50px;
+
+background: #FFBA08;
+border-radius: 9px;
+}
+
+.contact-Us {
+    /* Contract Us */
+width: 117px;
+height: 32px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+
+color: #000000;
+}
+
+.Login {
+    /* Rectangle 40 */
+width: 111px;
+height: 44px;
+
+background: #FFBA08;
+box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
+border-radius: 6px;
+}
+
+.Login  {
+    /* Login */
+width: 70px;
+height: 35px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+
+color: #000000;
+}
+
+.Register {
+    /* Rectangle 37 */
+width: 111px;
+height: 44px;
+
+background: #FFBA08;
+box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
+border-radius: 6px;
+}
+
+.Register {
+    /* Register */
+width: 90px;
+height: 35px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+
+color: #000000;
+
 }
 /* At frame 6 in basic */
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
